# AI-powered-content-Moderation-system

./: .env.template  Dockerfile  README.md  build_rust.py  complete_test.py  config.py  demo_system.py  health_check_results.json  moderation.db  requirements.txt  setup.py  simple_test.py  test_direct_image.py
.github/workflows/: ci.yml
api-gateway/: main.py
api-gateway/routes/: __init__.py  gateway_routes.py
dashboard/: README.md  dashboard.db  requirements.txt  setup_dashboard.py  test_integration.py
dashboard/dashboard/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/moderation_app/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
dashboard/templates/: base.html
database/: db.py
database/migrations/: 001_initial_schema.py
docs/: README.md
image-moderation-service/: __init__.py  main.py
image-moderation-service/api/: __init__.py  image_moderation.py
image-moderation-service/models/: __init__.py  image_classifier.py  rust_image_classifier.py
image-moderation-service/utils/: __init__.py  image_preprocessor.py
rust-moderation/: Cargo.toml
rust-moderation/src/: lib.rs
scripts/: demo.py  download_models.py  health_check.py  start_services.py  test_image_moderation.py
tests/image-moderation/: __init__.py  test_image_moderation.py
tests/text-moderation/: __init__.py  test_text_moderation.py
text-moderation-service/: __init__.py  main.py
text-moderation-service/api/: __init__.py  text_moderation.py
text-moderation-service/models/: __init__.py  rust_text_classifier.py  text_classifier.py
(+15 files in other folders)
